--- a/docs/public-api.asciidoc
+++ b/docs/public-api.asciidoc
@@ -179,14 +179,14 @@ finally
 
 
 [float]
-[[api-transaction-tags]]
-==== `Dictionary<string,string> Tags`
-A flat mapping of user-defined tags with string values. 
+[[api-transaction-labels]]
+==== `Dictionary<string,string> Labels`
+A flat mapping of user-defined labels with string values. 
 
-TIP: Before using custom tags, ensure you understand the different types of
+TIP: Before using custom labels, ensure you understand the different types of
 {apm-overview-ref-v}/metadata.html[metadata] that are available.
 
-WARNING: Avoid defining too many user-specified tags.
+WARNING: Avoid defining too many user-specified labels.
 Defining too many unique fields in an index is a condition that can lead to a
 {ref}/mapping.html#mapping-limit-settings[mapping explosion].
 
@@ -196,13 +196,13 @@ Ageny.Tracer
  .CaptureTransaction(TransactionName, TransactionType, 
     transaction =>
     {
-        transaction.Tags["foo"] = "bar";
+        transaction.Labels["foo"] = "bar";
         //application code that is captured as a transaction
     });
 ----
 
-* `key`:   The tag key
-* `value`: The tag value
+* `key`:   The label key
+* `value`: The label value
 
 [float]
 [[api-transaction-end]]
@@ -321,14 +321,14 @@ In such a case, the name of the span will contain information about the query it
 and the type will hold information about the database type.
 
 [float]
-[[api-span-tags]]
-==== `Dictionary<string,string> Tags`
-Similar to <<api-transaction-tags>> on the <<api-transaction>>: A flat mapping of user-defined tags with string values.
+[[api-span-labels]]
+==== `Dictionary<string,string> Labels`
+Similar to <<api-transaction-labels>> on the <<api-transaction>>: A flat mapping of user-defined labels with string values.
 
-TIP: Before using custom tags, ensure you understand the different types of
+TIP: Before using custom labels, ensure you understand the different types of
 {apm-overview-ref-v}/metadata.html[metadata] that are available.
 
-WARNING: Avoid defining too many user-specified tags.
+WARNING: Avoid defining too many user-specified labels.
 Defining too many unique fields in an index is a condition that can lead to a
 {ref}/mapping.html#mapping-limit-settings[mapping explosion].
 
@@ -337,7 +337,7 @@ Defining too many unique fields in an index is a condition that can lead to a
 transaction.CaptureSpan(SpanName, SpanType, 
 span =>
     {
-        span.Tags["foo"] = "bar";
+        span.Labels["foo"] = "bar";
         //application code that is captured as a span
     });
 ----
