--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -14,5 +14,6 @@ include::./setup.asciidoc[Set Up]
 include::./supported-technologies.asciidoc[Supported Technologies]
 include::./metrics.asciidoc[Metrics]
 include::./configuration.asciidoc[Configuration]
-include::./public-api.asciidoc[API documentation]
+include::./public-api.asciidoc[Public API]
+include::./performance-tuning.asciidoc[Performance Tuning]
 include::./release-notes.asciidoc[Release notes]
