Add ability to specify service version (#393)
* #198 add configuration name to have ability to define service version

* implement logic for parsing service version from configuration

* add documentation about service version to configuration page

* add unit tests for service version

* change description for service name configuration parameter

* change ServiceVersion type from Version to string

* change logic for discovering service version

try to get service version only from entry assembly. Don't try to analyze stack trace

* limit service.version to 1024 characters

https://github.com/elastic/apm-server/blob/7b716ad540a68d0f95060340651d4ec5dbfdc017/docs/spec/service.json#L80

* use information version from AssemblyInformationalVersion attribute

to set default service version

* Update documentation according to default value of service version

* fix pr comments

* Update test/Elastic.Apm.Tests/HttpDiagnosticListenerTests.cs

* Update test/Elastic.Apm.AspNetCore.Tests/AspNetCoreMiddlewareTests.cs

Remove Version assert. See explanation: https://github.com/elastic/apm-agent-dotnet/pull/393#issuecomment-522960560

--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -110,6 +110,26 @@ NOTE: The service name must conform to this regular expression: ^[a-zA-Z0-9 _-]+
 |============
 
 [float]
+[[config-service-version]]
+==== `ServiceVersion`
+
+A version string for the currently deployed version of the service. If you don’t
+version your deployments, the recommended value for this field is the commit identifier
+of the deployed revision, e.g. the output of git rev-parse HEAD.
+
+[options="header"]
+|============
+| Environment variable name      | IConfiguration key 
+| `ELASTIC_APM_SERVICE_VERSION` | `ElasticApm:ServiceVersion`
+|============
+
+[options="header"]
+|============
+| Default                                        | Type
+| Informational version of the entry assembly    | String 
+|============
+
+[float]
 [[config-transaction-sample-rate]]
 ==== `TransactionSampleRate`
 
