--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -184,7 +184,7 @@ It also expects that a period (`.`) is used to separate the integer and the frac
 [[config-central-config]]
 ==== `CentralConfig` (added[1.1])
 
-If set to `true`, the agent makes periodic requests to the APM Server to fetch the latest configuration.
+If set to `true`, the agent makes periodic requests to the APM Server to fetch the latest {kibana-ref}/agent-configuration.html[APM Agent configuration].
 
 [options="header"]
 |============
