--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -223,6 +223,8 @@ It also expects that a period (`.`) is used to separate the integer and the frac
 
 Limits the amount of spans that are recorded per transaction. This is helpful in cases where a transaction creates a very high amount of spans (e.g. thousands of SQL queries). Setting an upper limit will prevent overloading the agent and the APM server with too much work for such edge cases.
 
+NOTE: Setting it to `-1` means that spans will never be dropped. Setting it to `0` means that spans will never be collected.
+
 [options="header"]
 |============
 | Environment variable name           | IConfiguration key 
