Add documentation for the new configuration source

--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -33,7 +33,9 @@ public class Startup
 }
 ----
 
-With this you can use any configuration source that you configured on the `IConfiguration` instance that you passed to the APM Agent. You can find the key of each configuration below in the IConfiguration key column.
+With this you can use any configuration source that you configured on the `IConfiguration` instance that you passed to the APM Agent.
+You can find the key of each configuration option
+in the `IConfiguration or Web.config key` column of the corresponding option's description.
 
 NOTE: By simply calling `app.UseElasticApm()` without the overload, the agent will read configurations only from environment variables.
 
@@ -44,7 +46,7 @@ NOTE: By simply calling `app.UseElasticApm()` without the overload, the agent wi
 Below is a sample `appsettings.json` configuration file for a typical ASP.NET Core application. There are two important takeaways:
 
 1. The part below `ElasticApm` is fetched by the agent if the corresponding `IConfiguration` is passed to the agent.
-2. With ASP.NET Core, you must set `LogLevel for the internal APM logger in the standard `Logging` section with the `ElasticApm` category name.
+2. With ASP.NET Core, you must set `LogLevel` for the internal APM logger in the standard `Logging` section with the `ElasticApm` category name.
 
 [source,js]
 ----
@@ -85,6 +87,41 @@ In this case, you can set the log level of the agent with `ElasticApm:LogLevel`,
 }
 ----
 
+[[configuration-on-asp-net]]
+=== Configuration on ASP.NET
+
+When monitoring ASP.NET applications the agent uses two source of configuration:
+Web.config and environment variables.
+Web.config has precedence over environment variables which means that
+the agent first tries to find a configuration option value by its key in Web.config.
+Only if it's not present then the agent tries to look for it among environment variables
+and if it's not present there as well the agent falls back on the option's default value.
+
+You can find the key of each configuration option
+in the `IConfiguration or Web.config key` column of the corresponding option's description.
+
+[float]
+[[sample-config]]
+==== Sample configuration file
+
+Below is a sample `Web.config` configuration file for a ASP.NET application.
+
+[source,xml]
+----
+<?xml version="1.0" encoding="utf-8"?>
+<!-- ... -->
+<configuration>
+    <!-- ... -->
+    <appSettings>
+        <!-- ... -->
+        <add key="ElasticApm:ServerUrls" value="https://my-apm-server:8200" />
+        <!-- ... -->
+    </appSettings>
+    <!-- ... -->
+</configuration>
+----
+
+
 [[config-core]]
 === Core configuration options
 
@@ -99,7 +136,7 @@ NOTE: The service name must conform to this regular expression: ^[a-zA-Z0-9 _-]+
 
 [options="header"]
 |============
-| Environment variable name      | IConfiguration key 
+| Environment variable name      | IConfiguration or Web.config key 
 | `ELASTIC_APM_SERVICE_NAME` | `ElasticApm:ServiceName`
 |============
 
@@ -119,7 +156,7 @@ of the deployed revision, e.g. the output of git rev-parse HEAD.
 
 [options="header"]
 |============
-| Environment variable name      | IConfiguration key 
+| Environment variable name      | IConfiguration or Web.config key 
 | `ELASTIC_APM_SERVICE_VERSION` | `ElasticApm:ServiceVersion`
 |============
 
@@ -144,7 +181,7 @@ You must use the query bar to filter for a specific environment in versions prio
 
 [options="header"]
 |============
-| Environment variable name      | IConfiguration key 
+| Environment variable name      | IConfiguration or Web.config key 
 | `ELASTIC_APM_ENVIRONMENT`      | `ElasticApm:Environment`
 |============
 
@@ -170,7 +207,7 @@ It also expects that a period (`.`) is used to separate the integer and the frac
 
 [options="header"]
 |============
-| Environment variable name             | IConfiguration key 
+| Environment variable name             | IConfiguration or Web.config key 
 | `ELASTIC_APM_TRANSACTION_SAMPLE_RATE` | `ElasticApm:TransactionSampleRate`
 |============
 
@@ -189,7 +226,7 @@ It also expects that a period (`.`) is used to separate the integer and the frac
 
 [options="header"]
 |============
-| Environment variable name | IConfiguration key
+| Environment variable name | IConfiguration or Web.config key
 | `ELASTIC_APM_SERVER_URLS` | `ElasticApm:ServerUrls`
 |============
 
@@ -209,7 +246,7 @@ NOTE: Providing multiple URLs is not supported by the agent yet. If multiple URL
 
 [options="header"]
 |============
-| Environment variable name | IConfiguration key
+| Environment variable name | IConfiguration or Web.config key
 | `ELASTIC_APM_SECRET_TOKEN` | `ElasticApm:SecretToken`
 |============
 
@@ -230,7 +267,7 @@ Use this setting in case the APM Server requires a token (e.g. APM Server in Ela
 
 [options="header"]
 |============
-| Environment variable name | IConfiguration key
+| Environment variable name | IConfiguration or Web.config key
 | `ELASTIC_APM_FLUSH_INTERVAL` | `ElasticApm:FlushInterval`
 |============
 
@@ -264,7 +301,7 @@ in that case agent uses the default value instead.
 
 [options="header"]
 |============
-| Environment variable name | IConfiguration key
+| Environment variable name | IConfiguration or Web.config key
 | `ELASTIC_APM_MAX_BATCH_EVENT_COUNT` | `ElasticApm:MaxBatchEventCount`
 |============
 
@@ -288,7 +325,7 @@ in that case the Agent will use the default value instead.
 
 [options="header"]
 |============
-| Environment variable name | IConfiguration key
+| Environment variable name | IConfiguration or Web.config key
 | `ELASTIC_APM_MAX_QUEUE_EVENT_COUNT` | `ElasticApm:MaxQueueEventCount`
 |============
 
@@ -326,7 +363,7 @@ The default unit for this option is `s`.
 
 [options="header"]
 |============
-| Environment variable name      | IConfiguration key 
+| Environment variable name      | IConfiguration or Web.config key 
 | `ELASTIC_APM_METRICS_INTERVAL` | `ElasticApm:MetricsInterval`
 |============
 
@@ -339,7 +376,7 @@ The default unit for this option is `s`.
 
 [options="header"]
 |============
-| Environment variable name     | IConfiguration key
+| Environment variable name     | IConfiguration or Web.config key
 | `ELASTIC_APM_CAPTURE_HEADERS` | `ElasticApm:CaptureHeaders`
 |============
 
@@ -370,7 +407,7 @@ Setting it to 0 will disable stack trace collection. Any positive integer value 
 
 [options="header"]
 |============
-| Environment variable name     | IConfiguration key
+| Environment variable name     | IConfiguration or Web.config key
 | `ELASTIC_APM_STACK_TRACE_LIMIT` | `ElasticApm:StackTraceLimit`
 |============
 
@@ -401,7 +438,7 @@ The default unit for this option is `ms`
 
 [options="header"]
 |============
-| Environment variable name     | IConfiguration key
+| Environment variable name     | IConfiguration or Web.config key
 | `ELASTIC_APM_SPAN_FRAMES_MIN_DURATION` | `ElasticApm:SpanFramesMinDuration`
 |============
 
@@ -415,7 +452,7 @@ The default unit for this option is `ms`
 
 [options="header"]
 |============
-| Environment variable name | IConfiguration key
+| Environment variable name | IConfiguration or Web.config key
 | `ELASTIC_APM_LOG_LEVEL`   | `ElasticApm:LogLevel`
 |============
 
