add mention that environment configuration parameter was added in 1.1

--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -168,7 +168,7 @@ of the deployed revision, e.g. the output of git rev-parse HEAD.
 
 [float]
 [[config-environment]]
-==== `Environment`
+==== `Environment` (added[1.1])
 
 The name of the environment this service is deployed in, e.g. "production" or "staging".
 
