--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -423,7 +423,9 @@ For transactions that are HTTP requests, the agent can optionally capture the re
 If the request has a body and this setting is disabled, the body will be shown as [REDACTED].
 This option is case-insensitive.
 
-WARNING: Request bodies often contain sensitive values like passwords, credit card numbers etc. If your service handles data like this, we advise to only enable this feature with care. Turning on body capturing can also significantly increase the overhead in terms of heap usage, network utilisation and Elasticsearch index size.
+WARNING: Request bodies often contain sensitive values like passwords, credit card numbers, etc.
+If your service handles data like this, we advise to only enable this feature with care.
+Turning on body capturing can also significantly increase the overhead in terms of heap usage, network utilization, and Elasticsearch index size.
 
 Possible options are `off`, `errors`, `transactions` and `all`:
 
