--- a/docs/setup.asciidoc
+++ b/docs/setup.asciidoc
@@ -10,7 +10,7 @@ In order to avoid adding unnecessary dependencies in applications that aren’t 
 * https://www.nuget.org/packages/Elastic.Apm.AspNetCore[Elastic.Apm.AspNetCore]: This package contains ASP.NET Core monitoring related code. The main difference between this package and the `Elastic.Apm.NetCoreAll` package is that this package does not reference the `Elastic.Apm.EntityFrameworkCore` package, so if you have an ASP.NET Core application that does not use EF Core and you want to avoid adding additional unused references, you should use this package.
 * https://www.nuget.org/packages/Elastic.Apm.EntityFrameworkCore[Elastic.Apm.EntityFrameworkCore]: This package contains EF Core monitoring related code.
 * https://www.nuget.org/packages/Elastic.Apm.AspNetFullFramework[Elastic.Apm.AspNetFullFramework]: This package contains ASP.NET (Full .NET Framework) monitoring related code.
-* https://www.nuget.org/packages/Elastic.Apm.EntityFramework6[Elastic.Apm.EntityFramework6]: This package contains interceptor that automatically creates spans for DB operations executed by Entity Framework 6 (EF6) on behalf of the application.
+* https://www.nuget.org/packages/Elastic.Apm.EntityFramework6[Elastic.Apm.EntityFramework6]: This package contains an interceptor that automatically creates spans for DB operations executed by Entity Framework 6 (EF6) on behalf of the application.
 
 You simply add the agent to your .NET application by referencing one of these packages.
 
