--- a/docs/setup.asciidoc
+++ b/docs/setup.asciidoc
@@ -10,6 +10,7 @@ In order to avoid adding unnecessary dependencies in applications that aren’t 
 * https://www.nuget.org/packages/Elastic.Apm.AspNetCore[Elastic.Apm.AspNetCore]: This package contains ASP.NET Core monitoring related code. The main difference between this package and the `Elastic.Apm.NetCoreAll` package is that this package does not reference the `Elastic.Apm.EntityFrameworkCore` package, so if you have an ASP.NET Core application that does not use EF Core and you want to avoid adding additional unused references, you should use this package.
 * https://www.nuget.org/packages/Elastic.Apm.EntityFrameworkCore[Elastic.Apm.EntityFrameworkCore]: This package contains EF Core monitoring related code.
 * https://www.nuget.org/packages/Elastic.Apm.AspNetFullFramework[Elastic.Apm.AspNetFullFramework]: This package contains ASP.NET (Full .NET Framework) monitoring related code.
+* https://www.nuget.org/packages/Elastic.Apm.EntityFramework6[Elastic.Apm.EntityFramework6]: This package contains an interceptor that automatically creates spans for DB operations executed by Entity Framework 6 (EF6) on behalf of the application.
 
 You simply add the agent to your .NET application by referencing one of these packages.
 
@@ -75,3 +76,34 @@ as shown in the following example:
 ----
 
 You can also configure the agent using `web.config` as described at <<configuration-on-asp-net>>.
+
+
+[float]
+[[setup-ef6]]
+=== Entity Framework 6
+
+You can enable auto instrumentation for Entity Framework 6 by referencing the `Elastic.Apm.EntityFramework6` package
+and including the `Ef6Interceptor` interceptor in your application's `web.config`:
+
+[source,xml]
+----
+<?xml version="1.0" encoding="utf-8"?>
+<configuration>
+    <entityFramework>
+        <interceptors>
+            <interceptor type="Elastic.Apm.EntityFramework6.Ef6Interceptor, Elastic.Apm.EntityFramework6" />
+        </interceptors>		
+    </entityFramework>
+</configuration>
+----
+
+As an alternative to registering the interceptor via the configuration, you can register it in the application code:   
+[source,csharp]
+----
+DbInterception.Add(new Elastic.Apm.EntityFramework6.Ef6Interceptor());
+----
+For example, in an ASP.NET MVC application, you can place the above call in the `Application_Start` method.
+
+NOTE: Be careful not to execute `DbInterception.Add` for the same interceptor more than once,
+or you'll get additional interceptor instances.
+For example, if you add `Ef6Interceptor` interceptor twice, you'll see two spans for every SQL query. 
