--- a/docs/performance-tuning.asciidoc
+++ b/docs/performance-tuning.asciidoc
@@ -4,7 +4,7 @@ please view this documentation at https://www.elastic.co/guide/en/apm/agent/dotn
 endif::[]
 
 [[performance-tuning]]
-== Performance Tuning
+== Performance tuning
 
 There are many options available to tune agent performance.
 Which option to adjust depends on whether you are optimizing for speed, memory usage, bandwidth or storage.
@@ -33,7 +33,7 @@ Here's an example of setting the sample rate to 20% using <<configuration-on-asp
 
 [float]
 [[performance-tuning-stack-traces]]
-=== Stack Traces
+=== Stack traces
 
 In a complex application,
 a request may produce many spans.
