--- a/docs/supported-technologies.asciidoc
+++ b/docs/supported-technologies.asciidoc
@@ -4,8 +4,7 @@ please view this documentation at https://www.elastic.co/guide/en/apm/agent/dotn
 endif::[]
 
 [[supported-technologies]]
-== Supported Technologies
-This page describes the technologies supported by the Elastic APM .NET agent.
+== Supported technologies
 
 If your favorite technology is not supported yet,
 you can vote for it by participating in our
@@ -33,7 +32,7 @@ This means .NET Core 2.0 (or newer) and .NET Framework 4.6.1 (or newer).
 
 [float]
 [[supported-web-frameworks]]
-=== Web Frameworks
+=== Web frameworks
 
 Automatic instrumentation for a web framework means
 a transaction is automatically created for each incoming request and it is named after the registered route.
@@ -56,7 +55,7 @@ We support automatic instrumentation for the following web frameworks.
 
 [float]
 [[supported-data-access-technologies]]
-=== Data Access Technologies
+=== Data access technologies
 
 We support automatic instrumentation for the following data access technologies.
 
