--- a/docs/intro.asciidoc
+++ b/docs/intro.asciidoc
@@ -15,7 +15,7 @@ as well as a simple API which allows you to instrument any application.
 === How does the Agent work?
 
 The agent auto-instruments <<supported-technologies,supported technologies>> and records interesting events,
-like HTTP requests and database queries. To do this, it {CONTENT_HERE}
+like HTTP requests and database queries. To do this, it uses built in capabilities of the instrumented frameworks like [Diagnostic Source](https://docs.microsoft.com/en-us/dotnet/api/system.diagnostics.diagnosticsource?view=netcore-3.0), an HTTP module for IIS, or [IDbCommandInterceptor](https://docs.microsoft.com/en-us/dotnet/api/system.data.entity.infrastructure.interception.idbcommandinterceptor?view=entity-framework-6.2.0) for Entity Framework.
 This means that for the supported technologies, there are no code changes required.
 
 The Agent automatically {CONTENT_HERE}
